# Bambu

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agent/: MAP.md
.agents/skills/bambu-operate/: SKILL.md
.claude/: settings.json
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
.greptile/: config.json  files.json
agents/: README.md
agents/prompts/: maker.md  reviewer.md
bambu/: cad.py  cli.py  context.py  design_pipeline.py  intake.py  mcp_server.py  mesh.py  mesh_lane.py  meshy.py  printability.py  projects.py  review3d.py
bambu/cad/: __init__.py  animals.py  furniture.py  heads.py  primitives.py
bambu/cad/archetypes/: seated_diorama.py
docs/: agent-ready.md  ci.md
docs/learning/: README.md  build123d-figurine-workflow.md  hybrid-lane.md  shapr3d-fusion-workflow.md
docs/superpowers/plans/: 2026-06-12-v3-agentic-design-pipeline.md
examples/world-cup-neighbors/: README.md
profiles/bambu-a1-mini/: context.yaml
projects/best-buds-chair/: artifacts.json  project.yaml
projects/best-buds-chair/designs/v1/: design.yaml  fusion_manifest.yaml  views.yaml  visual_acceptance.yaml
projects/best-buds-chair/mesh/: NEXT_STEPS.md  provenance.yaml
projects/best-buds-chair/references/: intake.yaml
projects/best-buds-chair/source/v1/: model.py
projects/world-cup-neighbors/: artifacts.json  project.yaml
projects/world-cup-neighbors/designs/v3/: build_plan.yaml  design.yaml  (+4 more)
projects/world-cup-neighbors/measurements/: v001.yaml
projects/world-cup-neighbors/references/: manifest.yaml
projects/world-cup-neighbors/reviews/: 004-print-feedback.md  007-v3b-build123d-iteration.md
scripts/: check-resource.py  check-runner.sh  check-status.sh  check.sh
tests/: test_cad.py  test_cli.py  test_context.py  test_design_pipeline.py  test_export_body.py  test_hybrid_release.py  test_intake.py  test_mcp_tools.py  test_mesh.py  test_meshy.py  test_projects.py  test_review3d.py  test_seated_diorama.py  test_world_cup_v2.py
tools/: review_3d.py
(+4 files in other folders)
